@@ -47,6 +47,7 @@
 #else
 #  define MALLOC(a) malloc(a)
 #  define FREE(a) free(a)
+#  define STRDUP(a) strdup(a)
 #  ifdef NS_DEBUG
 #    define D_ESCREEN(a)  fprintf(stderr,a);
 #  else
@@ -193,7 +194,7 @@ ns_new_hop(int lp, char *fw, int fp, int delay, _ns_sess * s)
     h = MALLOC(sizeof(_ns_hop));
     if (h) {
         bzero(h, sizeof(_ns_hop));
-        if ((h->fw = strdup(fw))) {
+        if ((h->fw = STRDUP(fw))) {
             if (!lp) {
                 lp = NS_MIN_PORT;       /* local port defaults to */
                 if (ha) {       /* NS_MIN_PORT. if that's */
@@ -1150,12 +1151,12 @@ ns_attach_by_URL(char *url, char *hop, _ns_efuns ** ef, int *err, void *xd)
     if (url && strlen(url)) {
         char *q;
 
-        if (!(d = strdup(url)))
+        if (!(d = STRDUP(url)))
             goto fail;
 
         if ((q = strstr(d, "://"))) {   /* protocol, if any */
             *q = '\0';
-            if (!(sess->proto = strdup(d)))
+            if (!(sess->proto = STRDUP(d)))
                 goto fail;
             q += 3;
         } else
@@ -1168,10 +1169,10 @@ ns_attach_by_URL(char *url, char *hop, _ns_efuns ** ef, int *err, void *xd)
                 *p = '\0';
                 if ((r = strchr(q, ':'))) {     /* password, if any */
                     *(r++) = '\0';
-                    if (!(sess->pass = strdup(r)))      /* password may be empty string! */
+                    if (!(sess->pass = STRDUP(r)))      /* password may be empty string! */
                         goto fail;
                 }
-                sess->user = strdup(q);
+                sess->user = STRDUP(q);
             }
             q = p + 1;
         }
@@ -1227,7 +1228,7 @@ ns_attach_by_URL(char *url, char *hop, _ns_efuns ** ef, int *err, void *xd)
                                     *rx = '\0';
                                 if (*r != '/')
                                     D_ESCREEN(("URL: path for screen's option -c should be absolute (%s)\n", r));
-                                if ((rc = strdup(r))) {
+                                if ((rc = STRDUP(r))) {
                                     if (sess->home)     /* this should never happen */
                                         FREE(sess->home);
                                     D_ESCREEN(("URL: searching for rc in %s\n", rc));
@@ -1250,7 +1251,7 @@ ns_attach_by_URL(char *url, char *hop, _ns_efuns ** ef, int *err, void *xd)
                     }
                 }
 
-                if (!(sess->rsrc = strdup(p)))
+                if (!(sess->rsrc = STRDUP(p)))
                     goto fail;
             }
         }
@@ -1263,7 +1264,7 @@ ns_attach_by_URL(char *url, char *hop, _ns_efuns ** ef, int *err, void *xd)
             }
         }
 
-        if (strlen(q) && !(sess->host = strdup(q)))     /* host, if any */
+        if (strlen(q) && !(sess->host = STRDUP(q)))     /* host, if any */
             goto fail;
 
         FREE(d);
@@ -1276,7 +1277,7 @@ ns_attach_by_URL(char *url, char *hop, _ns_efuns ** ef, int *err, void *xd)
             *err = NS_UNKNOWN_USER;
             goto fail;
         }
-        if (!(sess->user = strdup(pwe->pw_name)))
+        if (!(sess->user = STRDUP(pwe->pw_name)))
             goto fail;
     } else if ((sess->host && strcmp(sess->host, "localhost") && strcmp(sess->host, "127.0.0.1")) || sess->port) {
         pwe = NULL;
@@ -1294,7 +1295,7 @@ ns_attach_by_URL(char *url, char *hop, _ns_efuns ** ef, int *err, void *xd)
 
 #ifdef NS_HAVE_SCREEN
     if (getenv("SYSSCREENRC")) {        /* $SYSSCREENRC */
-        if (!(sess->sysrc = strdup(getenv("SCREENRC"))))
+        if (!(sess->sysrc = STRDUP(getenv("SCREENRC"))))
             goto fail;
     } else {
         char *loc[] = { "/usr/local/etc/screenrc",      /* official */
@@ -1306,14 +1307,14 @@ ns_attach_by_URL(char *url, char *hop, _ns_efuns ** ef, int *err, void *xd)
 
         for (n = 0; n < nloc; n++)
             if (!access(loc[n], R_OK)) {
-                if (!(sess->sysrc = strdup(loc[n])))
+                if (!(sess->sysrc = STRDUP(loc[n])))
                     goto fail;
                 n = nloc;
             }
     }
 
     if (getenv("SCREENRC")) {   /* $SCREENRC */
-        sess->home = strdup(getenv("SCREENRC"));
+        sess->home = STRDUP(getenv("SCREENRC"));
     } else if (pwe && !sess->home) {    /* ~/.screenrc */
         if ((sess->home = MALLOC(strlen(pwe->pw_dir) + strlen(NS_SCREEN_RC) + 2)))
             sprintf(sess->home, "%s/%s", pwe->pw_dir, NS_SCREEN_RC);
@@ -1321,7 +1322,7 @@ ns_attach_by_URL(char *url, char *hop, _ns_efuns ** ef, int *err, void *xd)
 #endif
 
     if (!sess->host) {          /* no host */
-        if (!(sess->host = strdup("localhost")))
+        if (!(sess->host = STRDUP("localhost")))
             goto fail;
         if (!sess->port) {      /* no host/port */
             sess->where = NS_LCL;
@@ -1345,7 +1346,7 @@ ns_attach_by_URL(char *url, char *hop, _ns_efuns ** ef, int *err, void *xd)
 
             sess->backend = NS_MODE_TWIN;
             if (!sess->twin_str)
-                sess->twin_str = strdup(twd ? twd : ":0");
+                sess->twin_str = STRDUP(twd ? twd : ":0");
         } else
 #endif
         if (!strcmp(sess->proto, "scream")) {
@@ -2244,7 +2245,7 @@ ns_screen_command(_ns_sess * sess, char *cmd)
     D_ESCREEN(("Sending screen command %s\n", safe_print_string(cmd, strlen(cmd))));
     if (NS_EFUN_EXISTS(efuns, sess, NULL, inp_text)) {
         D_ESCREEN((" -> inp_text is set\n"));
-        if ((c = strdup(cmd))) {
+        if ((c = STRDUP(cmd))) {
             char *p = c;    /* replace default escape-char with that */
 
             D_ESCREEN((" -> translating escapes\n"));
@@ -2548,7 +2549,7 @@ ns_parse_screen_interactive(_ns_sess * sess, char *c)
     if (!c || !*c)
         return NS_FAIL;
 #ifdef NS_PARANOID
-    if (!(s = o = strdup(c)))
+    if (!(s = o = STRDUP(c)))
         return NS_FAIL;
 #else
     s = c;
@@ -2700,7 +2701,7 @@ ns_parse_screen_msg(_ns_sess * screen, char *p)
         if (screen->name) {
             FREE(screen->name);
         }
-        if ((screen->name = strdup(&p[strlen(NS_SCREEN_SESS_T)]))) {
+        if ((screen->name = STRDUP(&p[strlen(NS_SCREEN_SESS_T)]))) {
             size_t lsn = strlen(screen->name);
 
             if (lsn) {
@@ -2778,7 +2779,7 @@ ns_parse_screen(_ns_sess * screen, int force, int width, char *p)
     if (!force && screen->timestamp)
         return NS_SUCC;
 
-    if ((p = strdup(p))) {
+    if ((p = STRDUP(p))) {
         _ns_parse pd[NS_MAX_DISPS];
 
         p2 = &p[width - 1];
@@ -2818,6 +2819,9 @@ ns_parse_screen(_ns_sess * screen, int force, int width, char *p)
                 (void) ns_screen_command(screen, NS_SCREEN_INIT);
                 screen->timestamp = 1;
                 D_ESCREEN(("parse_screen: resetting screen...\n"));
+            } else {
+                D_ESCREEN(("parse_screen: nothing to do in exception, updating anyways...\n"));
+                ret = ns_upd_stat(screen);
             }
             FREE(p);
             return ret;
@@ -2877,7 +2881,7 @@ ns_parse_screen(_ns_sess * screen, int force, int width, char *p)
                 disp = disp_fetch(screen, n);
 
                 if (!disp) {    /* new display */
-                    if (!(disp = disp_fetch_or_make(screen, n)) || !(disp->name = strdup(pd[r].name))) {
+                    if (!(disp = disp_fetch_or_make(screen, n)) || !(disp->name = STRDUP(pd[r].name))) {
                         D_ESCREEN(("parse_screen: out of memory in new_display(%d)\n", n));
                         ret = NS_FAIL;
                     } else {
@@ -2888,7 +2892,7 @@ ns_parse_screen(_ns_sess * screen, int force, int width, char *p)
                            (disp->flags != pd[r].flags)) {
                     if (tmp) {
                         FREE(disp->name);
-                        if (!(disp->name = strdup(pd[r].name))) {
+                        if (!(disp->name = STRDUP(pd[r].name))) {
                             FREE(p);
                             return NS_FAIL;
                         }
